fixed unity web gl alignment

--- a/styles.css
+++ b/styles.css
@@ -365,10 +365,12 @@ footer {
 }
 
 .webgl-content {
+  display: inline-block;
   margin: 100px auto;
 }
 
 .returnHome {
+  display: block;
   font-size: xx-large;
   text-align: left;
   margin: 20px 0 0 20px;
